set @week to equal right week, fixed login white space again

--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 
 .landing-html {
-  margin-top:-40px;
+  margin-top:-80px;
   background: url(/assets/black_linen_v2.png); 
 }
 .landing-wrapper {
